--- a/.gitignore
+++ b/.gitignore
@@ -222,4 +222,6 @@ TSWLatexianTemp*
 # expex forward references with \gathertags
 *-tags.tex
 
+.DS_Store
+
 #==============================================================================
