--- a/src/build.gradle
+++ b/src/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        visuiVersion = '1.3.0'
     }
 
     repositories {
@@ -65,6 +66,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.kotcrab.vis:vis-ui:$visuiVersion"
     }
 }
 
