--- a/src/build.gradle
+++ b/src/build.gradle
@@ -67,6 +67,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
+        compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     }
 }
 
