implemented nation divisioning in map and cleaning up map generation

--- a/src/desktop/build.gradle
+++ b/src/desktop/build.gradle
@@ -14,8 +14,8 @@ task run(dependsOn: classes, type: JavaExec) {
     ignoreExitValue = true
 }
 
-task testMap(dependsOn: classes, type: JavaExec) {
-    main = "game.climatar.map.MidpointDisplacement"
+task test_map(dependsOn: classes, type: JavaExec) {
+    main = "game.climatar.map.tester";
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
     workingDir = project.assetsDir
